--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -2,8 +2,10 @@ autoinstall:
   version: 1
   locale: id-ID.UTF-8
   storage:
-    layout:
-      name: lvm
+    config:
+      - type: partition
+        id: root-partition
+        size: -1
   ssh:
     install-server: true
 #  codecs:
